--- a/js-modules/package.json
+++ b/js-modules/package.json
@@ -5,19 +5,18 @@
   "main": "index.js",
   "scripts": {
     "clear": "rimraf lib",
+    "build": "npm run clear && ./node_modules/.bin/babel --out-dir lib src",
+    "build:watch": "npm run build -- --watch",
     "lint": "eslint src/*.js",
-    "prepush": "npm run lint && npm run test:coverage",
+    "prepush": "npm run lint",
     "test": "mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "mocha tests/**/*.spec.js --require babel-register --watch",
     "test:coverage": "nyc npm test",
-    "build": "./node_modules/.bin/webpack --colors --progress",
-    "watch": "npm run build -- --watch",
-    "server": "./node_modules/.bin/webpack-dev-server --inline --open"
+    "build":"./node_modules/.bin/webpack --colors --progress",
+    "watch": "npm run build -- --watch"
+
   },
   "nyc": {
-    "functions": 80,
-    "lines": 80,
-    "check-coverage": true,
     "reporter": [
       "text",
       "html"
@@ -43,15 +42,12 @@
   "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
   "devDependencies": {
     "@babel/core": "^7.5.0",
-    "@babel/preset-env": "^7.5.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.26.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-native-modules": "^6.9.4",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
     "editorconfig": "^0.15.3",
     "eslint": "^4.19.1",
@@ -62,11 +58,10 @@
     "eslint-plugin-react": "^7.14.2",
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
-    "nyc": "^10.3.2",
+    "nyc": "^10.2.0",
     "rimraf": "^2.6.1",
     "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-cli": "^3.3.5"
   },
   "directories": {
     "test": "tests"
